--- a/Manuscript/FinalDraft_rev/ReviewResponses.tex
+++ b/Manuscript/FinalDraft_rev/ReviewResponses.tex
@@ -67,7 +67,7 @@ Because the third term on the right is the derivative of the log of the sum (as 
 {\bf Comment 1.2} The model with constant dispersal ($m$) is very much the same as the model of Ronce and Kirkpatrick (2001, Evolution), with the difference that the latter is fully deterministic and set in continuous time; but as long as the system attains an equilibrium rather than population cycles or chaos, continuous time should not make a difference. Ronce and Kirkpatrick focused on equilibria (such as the dominant vs subordinate state here ) and on local adaptation, not metapopulation resilience/stability, but did study the consequence of disturbances for switching between alternative equilibria (see the next point).
 }
 
-\noindent {\bf Response 1.2} We are thankful for the Reviewer in pointing out this reference, which we are embarrassed to admit to having overlooked. The model indeed has many similarities to our own, and we now acknowledge its importance and priority within the manuscript. The similarities in the resulting dynamics suggest that what we are observing in the two-population salmon system, as well as the implications that we derive for metapopulation robustness and recovery, may be generally relevant and illustrative of a general phenomenon outside of the constraints introduced in the specific formulation of our model.
+\noindent {\bf Response 1.2} We are thankful for the Reviewer in pointing out this reference, which we are embarrassed to admit to having overlooked. The model indeed has many similarities to our own, and we now acknowledge its importance and priority within the manuscript. The similarities in the resulting dynamics suggest that what we are observing in the two-population salmon system, as well as the implications that we derive for metapopulation robustness and recovery, may be generally relevant and illustrative of a general phenomenon outside of the constraints introduced in the specific formulation of our model. Though as Reviewer I notes, our model while complementary to Ronce and Kirkpatrick 2001, focuses instead on the metapopulation effects (portfolio effects, resilience, and overall robustness) of the observed dynamics rather than a detailed analytical treatment of the dynamics themselves. We highlight areas of complementarity and extension in the revised manuscript.
 
 \noindent We have made the following edits to the text:\\
 \noindent {\bf Line XXX:} \emph{This model formulation has parallels to that proposed by Ronce and Kirkpatrick [ref]), where habitat specialization evolves between two populations as a function of dispersal.
@@ -84,7 +84,7 @@ Importantly, we show that the resulting dynamics are qualitatively similar, sugg
 
 According to Kuznetsov (1998), there are two principle bifurcations in discrete maps, from which others are composed: the Fold and Flip (period-doubling).
 The Fold bifurcation is generally defined by the dominant eigenvalue $\lambda$ intersecting the unit circle in Real-Imaginary space at ${\rm Re}[\lambda]=+1$.
-We now include a new Supplemental Figure (SXX) that shows this is indeed the case for our system, and was the basis on which we initially identified the bifurcation. Although we are not specialists in bifurcation theory, our understanding is that the fold bifurcation is a general attribute based on this eigenvalue behavior, but as the Reviewers indicate, it is not a particularly clear or complete description of what is going on. 
+We now include a new figure S3 that shows this is indeed the case for our system, and was the basis on which we initially identified the bifurcation. Although we are not specialists in bifurcation theory, our understanding is that the fold bifurcation is a general attribute based on this eigenvalue behavior, but as the Reviewers indicate, it is not a particularly clear or complete description of what is going on. 
 A familiar, and more complicated bifurcation that occurs in systems with $\geq2$ parameters is the Cusp bifurcation, which occurs when two fold bifurcations interact at a cusp.
 A one-dimensional transect through the cusp results in what is commonly referred to as a Pitchfork Bifurcation (topological normal form: $x \mapsto x + \beta x - x^3$). At the cusp ($\beta=0$), the single fixed point crosses the combined fold bifurcations, and here it branches into 3 fixed points; two stable fixed points separated by an unstable fixed point.
 Identifying the bifurcation as a Pitchfork bifurcation increases clarity and specificity, and we have made the appropriate edits in an effort to do so.
@@ -92,7 +92,7 @@ Identifying the bifurcation as a Pitchfork bifurcation increases clarity and spe
 % Interestingly, because the system passes through a Pitchfork, or the Cusp at the cusp point, rather than one fold bifurcation at a time (which would result in similar stable-unstable-stable fixed points), the dependence of whether the system will veer to both states
 
 As the Reviewers suggest, we investigated whether or not our system displays hysteresis, as does the system in the Ronce and Kirkpatrick model.
-We now show that it does (Supplementary Figure SXX), a feature characteristic of Cusp bifurcations in general.
+We now show that it does (figure S4), a feature characteristic of Cusp bifurcations in general.
 This is more evidence that the dynamics described here and in Ronce and Kirkpatrick are perhaps general phenomena of spatially-linked eco-evolutionary systems.
 This perspective is reinforced by the fact that altering parameters between the two sites (creating asymmetry) does not alter the qualitative nature of the system.
 
@@ -103,7 +103,7 @@ This perspective is reinforced by the fact that altering parameters between the 
 {\bf Comment 1.4} The ms does not describe how recovery time was measured. The deterministic system returns to an equilibrium asymptotically, i.e., in infinite time. For practice, one defines a return ``close enough" for recovery. The details of this should be given, otherwise the results are not reproducible. Moreover, I think that near the bifurcation point total population size will equilibrate fast, but the distribution of individuals over the two habitats takes a longer time to equilibrate (the system is on the edge between a symmetric and an asymmetric equilibrium). If time to recovery includes the time that $N_1$ and $N_2$ individually reach their steady states, then this can explain the peak of recovery time at the bifurcation; but this does not mean that the total population size takes long to recover. If total population size was monitored, but recovery was interpreted as "return to original" whereas the system attains a different equilibrium (symmetric vs asymmetric, see above), then obviously recovery time will be infinite, but again this does not mean that the population does not recover from near extinction.
 }
 
-\noindent {\bf Response 1.4} We thank the Reviewer and apologize for our lack of clarity. We emphasize that our measure of recovery time is a numerical measurement, as eigenvalue-based (asymptotic) measures are not appropriate for the scale of disturbance that we introduce (extinction in some cases - far from the non-trivial fixed point(s) of the system). The procedure is now described in more detail within the text, and illustrated graphically in an additional supplemental figure (Supplementary Figure SXX). In short, we track the recovering aggregate population $N_T=N_1+N_2$ until it is within a standard deviation around the \emph{updated} fixed point (thus accounting for fixed points that are altered by the disturbance). Note that this recovery time is specifically for the aggregate population, such that if a single population takes a long time to recovery relative to the other, the aggregate takes longer to recover as well. If $N_T$ remains within a standard deviation of the final fixed point for some period of time, it is counted as recovered. Accordingly, trajectories that cycle around the fixed point are not counted as recovered until the cycles decay. To ensure reproducibility, all code is provided online in the Github repository: https://github.com/jdyeakel/SalmonStrays.
+\noindent {\bf Response 1.4} We thank the Reviewer and apologize for our lack of clarity. We emphasize that our measure of recovery time is a numerical measurement, as eigenvalue-based (asymptotic) measures are not appropriate for the scale of disturbance that we introduce (extinction in some cases - far from the non-trivial fixed point(s) of the system). The procedure is now described in more detail within the text, and illustrated graphically in an additional supplemental figure (figure S1). In short, we track the recovering aggregate population $N_T=N_1+N_2$ until it is within a standard deviation around the \emph{updated} fixed point (thus accounting for fixed points that are altered by the disturbance). Note that this recovery time is specifically for the aggregate population, such that if a single population takes a long time to recovery relative to the other, the aggregate takes longer to recover as well. If $N_T$ remains within a standard deviation of the final fixed point for some period of time, it is counted as recovered. Accordingly, trajectories that cycle around the fixed point are not counted as recovered until the cycles decay. To ensure reproducibility, all code is provided online in the Github repository: https://github.com/jdyeakel/SalmonStrays.
 
 \noindent We have made the following edits to the text:\\
 \noindent {\bf Line XXX:} \emph{Recovery time was calculated by initiating a disturbance at $t=t_d$, and monitoring $N_T(t_d+t)$ as $t\rightarrow T$, where $T$ is large. 
@@ -163,7 +163,7 @@ We suggest that our analysis is not merely a mathematical construction (interpre
 Similarly the strength of density dependence is calculated at sites 1 and 2 as $\beta(1)=\beta(1+\tilde{rv}_1)$ and $\beta(2)=\beta(1+\tilde{rv}_2)$ where $\tilde{rv}_{1,2}$ are independently drawn from $\rm{Normal}(0,\alpha)$ and $\beta=0.001$.
 Thus as asymmetry increases, so do the differences in vital rates between sites.
 
-To investigate the effects of increasing asymmetry on the main dynamical feature of our model, we assessed how increasing $\alpha$ altered the steady state portrait as a function of the straying rate $m$ shown in figure 1a, and this analysis is now included as a supplementary figure (figure Sxx). As can be seen, greater asymmetry (warm colors in the supplementary figure) does not alter the qualitative nature of the dynamics, and does not significantly change the position of the bifurcation. We take this as strong evidence that the qualitative nature of the system is not a mathematical construction relegated to a small slice of parameter space.
+To investigate the effects of increasing asymmetry on the main dynamical feature of our model, we assessed how increasing $\alpha$ altered the steady state portrait as a function of the straying rate $m$ shown in figure 1a, and this analysis is now included as a supplementary figure (figure S13). As can be seen, greater asymmetry (warm colors in the supplementary figure) does not alter the qualitative nature of the dynamics, and does not significantly change the position of the bifurcation. We take this as strong evidence that the qualitative nature of the system is not a mathematical construction relegated to a small slice of parameter space.
 
 3) Reviewer 1 pointed to an embarrassing oversight on our part: that a similar model had been explored by Ronce \& Kirkpatrick (Evolution, 2001). This model differed substantially in its formulation: it is continuous (rather than discrete), evolution occurs in the mortality term (rather than the recruitment rate), the strength of selection is determined by the linear difference of trait values and their optima (rather than by mechanistically incorporating the fitness landscape a la Lande 1976), etc. Still, the underlying dynamics appear to accord with those that we describe. This suggests that the dynamics are potentially of a general nature, though we do not investigate how general (that would be an interesting pursuit for another time).
 
@@ -174,7 +174,7 @@ Finally, although we like the idea of modeling changes in resource abundance in 
 {\bf Comment 2.3} It would be good to include more technical details about how the bifurcation analysis was carried out (or is this present in the missing SI text?). As it is, I have no idea about the numerical techniques that were used or even whether the authors have studied both increasing and decreasing parameter values, as necessary to enable detection of alternative stable states and discontinuities.
 }
 
-\noindent {\bf Response 2.3} We thank the Reviewer, and now briefly describe our analysis of the bifurcation (also see Response 1.3). We include a plot of the Jacobian eigenvalues across $m$ (figure SXX). Moreover, we note that hysteresis is observed at the bifurcation (evaluated by increasing and decreasing $m$), and this is shown in figure SXX.
+\noindent {\bf Response 2.3} We thank the Reviewer, and now briefly describe our analysis of the bifurcation (also see Response 1.3). We include a plot of the Jacobian eigenvalues across $m$ (figure S3). Moreover, we note that hysteresis is observed at the bifurcation (evaluated by increasing and decreasing $m$), and this is shown in figure S4.
 
 \noindent \textcolor{cyan}{
 {\bf Comment 2.4} Please include a table with the definitions and values of model parameters (including their units) and definitions of model variables.
