--- a/Manuscript/FinalDraft_rev/supp.tex
+++ b/Manuscript/FinalDraft_rev/supp.tex
@@ -265,7 +265,7 @@ Steady state densities of both populations as a function of $m$, where a pitchfo
 Steady states for populations with symmetrical values ($\alpha=0$) in the vital rates $r_{\rm max}$ and $\beta$ are shown with cool tones.
 As the asymmetry among populations between sites increases ($\alpha>0$), their vital rates diverge, such that the maximal growth at sites 1 and 2 is now $r_{\rm max,1}=r_{\rm max}(1+\tilde{rv}_1)$ and $r_{\rm max,2}=r_{\rm max}(1+\tilde{rv}_2)$ where $rv_{1,2}$ are independently drawn from $\rm{Normal}(0,\alpha)$ and $r_{\rm max}=2$. 
 Similarly the strength of density dependence is calculated at sites 1 and 2 as $\beta_1=\beta(1+\tilde{rv}_1)$ and $\beta_2=\beta(1+\tilde{rv}_2)$ where $\tilde{rv}_{1,2}$ are independently drawn from $\rm{Normal}(0,\alpha)$ and $\beta=0.001$.
-Steady states for populations with increasingly asymmetric values ($\alpha>0$) in the vital rates $r_{\rm max}$ and $\beta$ are shown in warm tones.
+Steady states for populations with increasingly asymmetric values ($\alpha\rightarrow 0.1$) for vital rates $r_{\rm max}$ and $\beta$ are shown in warmer tones.
 } \label{fig:symmetry}
 \end{figure}
 
