--- a/Manuscript/FinalDraft_rev/supp.tex
+++ b/Manuscript/FinalDraft_rev/supp.tex
@@ -74,6 +74,21 @@ ${}^*$To whom correspondence should be addressed: jdyeakel@gmail.com
 
 \beginsupplement
 
+
+
+
+\begin{figure}
+  \captionsetup{justification=raggedright,
+singlelinecheck=false
+}
+\centering
+\includegraphics[width=0.35\textwidth]{fig_mthetarelation.pdf}
+\caption{
+In some cases, habitat heterogeneity may be assumed to determine the rate of straying, if for example:
+1) sites are distributed over greater spatial distances, where habitat differences are assumed to be greater between more distant sites, or 2) individuals have behaviors promoting dispersal between habitats that are more similar. To examine such cases, we use the relationship $m= 0.5(1 + \Delta\theta)^{-1}$ where maximum straying is assumed to occur at $m=0.5$ (perfect mixing).
+} \label{fig:mthetarelation}
+\end{figure}
+
 \begin{figure}
   \captionsetup{justification=raggedright,
 singlelinecheck=false
@@ -85,17 +100,6 @@ Example of the numerical procedure used to estimate recovery time. After a distu
 } \label{fig:recovery}
 \end{figure}
 
-\begin{figure}
-  \captionsetup{justification=raggedright,
-singlelinecheck=false
-}
-\centering
-\includegraphics[width=0.35\textwidth]{fig_mthetarelation.pdf}
-\caption{
-In some cases, habitat heterogeneity may be assumed to determine the rate of straying, if for example:
-1) sites may be distributed over greater spatial distances, where habitat differences are assumed to be greater between more distant sites, or 2) individuals have behaviors promoting dispersal between habitats that are more similar. To examine such cases, we use the relationship $m= 0.5(1 + \Delta\theta)^{-1}$ where maximum straying is assumed to occur at $m=0.5$ (perfect mixing).
-} \label{fig:mthetarelation}
-\end{figure}
 
 \begin{figure}
   \captionsetup{justification=raggedright,
