--- a/Manuscript/FinalDraft_rev/msv6.tex
+++ b/Manuscript/FinalDraft_rev/msv6.tex
@@ -114,11 +114,11 @@ Movement of individuals among local populations (i.e. dispersal) can have a larg
 Dispersal facilitates evolutionary rescue, whereby immigration of individuals with heritable adapative traits can rescue small populations from local extinction in the context of maladaptive environmental change \citep{Bell:2011ki,Carlson:2014is}.
 % First, some level of straying is necessary to enable the rescue effect, whereby dispersal among populations can rescue small populations from local extinction (REFS). 
 On the other hand, high rates of dispersal may synchronize populations and actually increase the risk of extinction of the entire metapopulation \citep{Earn:2000fm}. 
-Third, dispersal will influence the evolutionary dynamics of the metapopulation.
+Dispersal will also influence the evolutionary dynamics of the metapopulation.
 % though how the interplay between selection and population dynamics might impact persistence is less well understood. 
 Although the dispersal of individuals into sites hosting other populations provides connections within the larger metapopulation, potentially promoting demographic and evolutionary rescue, it may also introduce maladapted individuals into habitats that are host to different environmental conditions, possibly lowering the mean fitness of the recipient population \citep{Muhlfeld:2014hs}. 
 More broadly, dispersal can provide a mechanism by which phenotypes are sorted in space rather than time and facilitates the spread of maladaptive genes \citep{Lowe:2015ft}.
-Dispersal in this case may lead to genetic homogenization that erodes the asynchrony that underpins portfolio effects and metapopulation persistence. 
+Dispersal in this case may lead to genetic homogenization that erodes the asynchrony underpinning portfolio effects and metapopulation persistence. 
 % Thus, straying can influence the resilience and robustness of metapopulations through both ecological and evolutionary processes.
 % Thus, the dual nature of straying as both promoter of connections among metapopulation demes and potential eroder of locally adapted gene complexes highlights the interplay between ecological dynamics of connected populations and the evolutionary dynamics of mixed trait distributions that respond to heterogeneous local conditions.
 
@@ -143,14 +143,13 @@ The potential influence of collective dispersal on the dynamics of individual po
 
 
 %Motivation: straying
-The eco-evolutionary impacts of dispersal likely has important implications for conservation and management in key taxa such as in migratory salmon.
+The eco-evolutionary impacts of dispersal likely have important implications for conservation and management in key taxa such as in migratory salmon.
 While anadromous salmonid fishes (genera \emph{Oncorhynchus} and \emph{Salmo}) are renown for returning to their natal spawning habitats with high accuracy and precision after years at sea \citep{Quinn:2011tf,Jonsson:2011kg,Keefer:2014gg}, there are generally some individuals that `stray' to non-natal sites to spawn \citep{Quinn:1993ge,Hendry:2004wf}.
 Salmon may operate as metapopulations, where populations are genetically distinct but linked by some level of straying \citep{Schtickzelle:2007wb,Anderson:2014cx}.
-Although extensive work has been done to document the extent of straying from donor populations and into recipient populations \citep{Keefer:2014gg,Bett:2017ha}, only recently have the abiotic, biotic, and anthropogenic influences of `straying' behaviors been investigated systemically \citep{Keefer:2008bs,Westley:2015to,Bond:2016dz}.
+Although extensive work has been done to document the extent of straying from donor populations and into recipient populations \citep{Keefer:2014gg,Bett:2017ha}, only recently have the abiotic, biotic, and anthropogenic influences of straying behaviors been investigated systemically \citep{Keefer:2008bs,Westley:2015to,Bond:2016dz}.
 Straying among salmon may be influenced by environmental factors such as water temperature, human activities such as hatchery practices, and population density as predicted by the collective migration hypothesis \citep{Peterson:2014gy}.
-These strays can introduce new maladaptive genotypes into the recipient population.
-Further, straying and genetic homogenization could synchronize population dynamics and erode portfolio effects \citep{Moore:2010gs,Carlson:2011ce,Braun:2016ib}.
-Thus, there is opportunity and a need to consider the eco-evolutionary consequences of straying for metapopulations in species of conservation and management concern such as salmon. 
+Straying can introduce new maladaptive genotypes into the recipient population, while the ensuing genetic homogenization could synchronize population dynamics and erode portfolio effects \citep{Moore:2010gs,Carlson:2011ce,Braun:2016ib}.
+Thus, there is an opportunity and need to consider the eco-evolutionary consequences of straying for metapopulations in species of conservation and management concern such as salmon. 
 
 % Asynchrony among salmon populations also increases the stability of fisheries that integrate across this diversity \citep{Schindler:2010he,Anonymous:2016jc}.
 % However, these portfolio effects may be eroded if asynchrony is influenced by genetic diversity and this genetic diversity is lost. 
@@ -182,9 +181,11 @@ Thus, there is opportunity and a need to consider the eco-evolutionary consequen
 Here we seek to explore how collective density-dependent straying influences the stability and robustness of metapopulations through ecological and evolutionary processes.
 % the potentially detrimental evolutionary effects of straying (erosion of local adaptation) and subsequent gene flow is balanced by the positive effects of demographic rescue is the subject of this contribution.
 % Here we ask the overarching question: how does collective behavior mediated dispersal and gene flow interact to influence the robustness of locally adapted populations?
-To address this question we construct a minimal eco-evolutionary model of two populations occupying different sites that are linked by straying individuals, each of which with an associated trait distribution subject to natural selection determined by local conditions.
+To address this question we construct a minimal eco-evolutionary model of two populations occupying different sites that are linked by straying individuals, each with an associated trait distribution subject to natural selection determined by local conditions.
 Specifically we compare (a) different rates of straying and (b) the influence of collective movement, across (c) increasing environmental heterogeneity, by assessing two measures of metapopulation robustness: the portfolio effect and the time required for a population(s) to recover following an induced disturbance. 
-This model enables us to explore the multiple and potentially opposing pathways by which straying influences metapopulation robustness such as the potentially detrimental erosion of local adaptation vs. the positive effects of demographic and evolutionary rescue.
+% This model enables us to explore the multiple and potentially opposing pathways by which straying influences metapopulation robustness such as the potentially detrimental erosion of local adaptation vs. the positive effects of demographic and evolutionary rescue.
+This model enables us to explore the tradeoff between the potentially detrimental erosion of local adaptation vs. the positive effects of demographic and evolutionary rescue, both of which are facilitated by straying. %such as the potentially detrimental erosion of local adaptation vs. the positive effects of demographic and evolutionary rescue.
+
 % [We show that taking straying into account leads to alternative stable states in population densities and trait values, which has consequences for maladaptation, intraspecific trait variability, and long-term sustainability of salmon metapopulations.]
 
 
@@ -195,22 +196,22 @@ This model enables us to explore the multiple and potentially opposing pathways 
 \noindent We consider two populations $N_1$ and $N_2$ that inhabit two distinct habitats, each with trait values $x_1$ and $x_2$ determining recruitment rates.
 We assume that there is an optimum trait value $\theta_1$ and $\theta_2$ associated with each habitat, where recruitment is maximized if the trait value of the local population equals the optimum, such that $x = \theta$.
 Moreover, we assume that $x_{1,2}$ are normally distributed with means $\mu_1$ and $\mu_2$ and have the same standard deviation $\sigma$.
-As such, the recruitment rate for both populations is determined by the mean trait value of the local population, such that $r_1 = R_1[\mu_1(t),\theta_1]$.
-Trait means for each population are subject to selection, the strength of which depends on the difference between the trait mean and the local trait optimum at a given point in time \citep{simpson1953major,Lande:1976ga}.
+As such, the recruitment rate $R_1[\mu_1(t),\theta_1]$ for both populations is determined by the mean trait value of the local population relative to optimal value at that site.
+Trait means for each population are subject to selection, the strength of which is proportional to the difference between the trait mean and the local trait optimum at a given point in time \citep{simpson1953major,Lande:1976ga}.
 
 %PW: Can we say anything about the effect of the recipient population size and that effect on evolutionary dynamics? Again, straying can be thought of as both from the donor or recipient population perspective.
-The two populations occur in spatially separate sites that are close enough such that a proportion of the population $m$ can stray into the other site, and where mortality occurs before individuals return to reproduce.
+The two populations occur in spatially separate sites that are close enough that a proportion of the population $m$ can stray into the other site, and where mortality occurs before individuals return to reproduce.
 If there is no straying between these populations, then the mean trait evolves towards the optimal value for each site $x_1 \rightarrow \theta_1$, and the recruitment rate for each population is maximized.
 If there is straying between populations at rate $m$, then the traits in each respective location will be pulled away from the optimum, and recruitment rates will be lowered.
 As $m \rightarrow 0.5$, the populations are perfectly mixed, acting as a single population.
 
 
-We use discrete Ricker framework described by Shelton and Mangel \citep{Shelton:2011eq} as the basis for our two-site metapopulation model, with the added effect of the local population $N_i$ mixing with a set proportion $m$ of a remote population $N_j$ that is straying into it.
+We use the discrete Ricker framework described by Shelton and Mangel \citep{Shelton:2011eq} as the basis for our two-site metapopulation model, with the added effect of the local population $N_i$ mixing with a set proportion $m$ of a remote population $N_j$ that is straying into it.
 In this sense, both populations serve simultaneously as donor and recipient populations.
-We first assume that the proportion ${\rm e}^{-Z}$ of both populations survive such that the surviving aggregated population, composed of both local individuals (at site $i$) and incoming strays (from site $j$), is $\left((1-m)N_i(t) + m N_j(t) \right){\rm e}^{-Z}$.
+We first assume that a proportion ${\rm e}^{-Z}$ of both populations survive such that the surviving aggregated population, composed of both local individuals (at site $i$) and incoming strays (from site $j$), is $\left((1-m)N_i(t) + m N_j(t) \right){\rm e}^{-Z}$.
 Because local individuals will recruit differently than incoming strays, the recruitment of the aggregate must incorporate two recruitment functions, given by $\left(R_i[\mu_i(t)] (1-m)N_i(t) + R_i[\mu_j(t)] m N_j(t)\right)$.
-This mix of individuals is subject to the same compensatory effects, which is determined by the parameter $\beta$.
-Taken together, the difference equation that determine changes in population size is
+This mix of individuals is subject to identical compensatory effects, which is determined by the parameter $\beta$.
+Taken together, the difference equation that determines changes in population size is
 
 \begin{align}
   &N_i(t+1) = \\ \nonumber
@@ -220,21 +221,21 @@ Taken together, the difference equation that determine changes in population siz
   \label{eq:N}
 \end{align}
 
-\noindent where the difference equation for $N_j$ mirrors that for $N_i$.
+\noindent where the equation for $N_j$ mirrors that for $N_i$.
 
 The recruitment of local individuals $(1-m)N_i(t)$ as a function of their mean trait value at time $t$ and the local trait optimum, is
 
 \begin{align}
   &R_i[\mu_i(t)] = \\ \nonumber
-  &\int_{-\infty}^\infty r_{\rm max}\exp\left\{\frac{(x_i(t)-\theta_i)^2}{2\tau^2}\right\} {\rm pr}(x_i(t),\mu_i,\sigma^2) {\rm d}x_i(t) +\tilde{P}\\ \nonumber
-  &= \frac{r_{\rm max} \tau  }{\sqrt{\sigma ^2+\tau ^2}}\exp\left\{-\frac{(\theta_i-\mu_i(t))^2}{2 \left(\sigma ^2+\tau ^2\right)}\right\} +\tilde{P},
+  &\int_{-\infty}^\infty r_{\rm max}\exp\left\{\frac{(x_i(t)-\theta_i)^2}{2\tau^2}\right\} {\rm pr}(x_i(t),\mu_i,\sigma^2) {\rm d}x_i(t) +\tilde{P}_i\\ \nonumber
+  &= \frac{r_{\rm max} \tau  }{\sqrt{\sigma ^2+\tau ^2}}\exp\left\{-\frac{(\theta_i-\mu_i(t))^2}{2 \left(\sigma ^2+\tau ^2\right)}\right\} +\tilde{P}_i,
   \label{eq:R}
 \end{align}
 
-\noindent where the mismatch between the local trait mean $\mu_i(t)$ and the local optimum $\theta_i$ scales the recruitment rate for the population, and $\tilde{P}\sim {\rm Normal}(0,0.01)$ introduces a small amount of demographic error.
+\noindent where the mismatch between the local trait mean $\mu_i(t)$ and the local optimum $\theta_i$ scales the recruitment rate for the population, and $\tilde{P}_i\sim {\rm Normal}(0,0.01)$ introduces a small amount of demographic error.
 The parameter $\tau$ is the strength of selection, and controls the sensitivity of recruitment to changes in the mean trait value away from the optimum (the strength of selection increases with smaller values of $\tau$), which we set as $\tau=1$ here and throughout.
 Because straying individuals are emigrating from a population with a mean trait value farther from the local optimum, their rate of recruitment is diminished.
-Recent studies of wild sockeye salmon have indeed found that straying individuals have lower life-time fitness than individuals that do not stray, although it unknown at what life-stage this selection occurs \citep{Peterson:2014gy}.
+Recent studies of wild sockeye salmon have indeed found that straying individuals have lower life-time fitness than individuals that do not stray, although it is unknown at what life-stage this selection occurs \citep{Peterson:2014gy}.
 % The compensatory effects are then determined by the exponential, following the Ricker stock-recruitment relationship.
 \\
 
@@ -262,15 +263,16 @@ Following Lande \citep{Lande:1976ga}, the mean trait value thus changes through 
 
 \noindent where the first two components determine the mixed normal average of the aggregated local and remote populations.
 The partial derivative in the Eq. \ref{eq:mu} determines how the mean trait changes through time due to natural selection \citep{Lande:1976ga}, which is proportional to the change in mean fitness with respect to $\mu_i$.
+We note that the derivative is dependent on both $\mu_i$ and $\mu_j$ due to the influence of the logarithm on the sum.
 %Comparison to the Ronce and Kirkpatrick paper
 This model formulation has parallels to that proposed by Ronce and Kirkpatrick \citep{Ronce:2001dp}, where habitat specialization evolves between two populations as a function of dispersal.
 The largest difference between these approaches is that our framework treats trait evolution mechanistically at some cost to analytical tractability.
-Importantly, we show that the resulting dynamics are qualitatively similar, suggesting that the dynamical features present in both of these approaches have potentially widespread ramifications for the evolutionary dynamics of spatially connected populations.
+Importantly, we show that the resulting dynamics are qualitatively similar, suggesting that the dynamical features present in both of these approaches have potentially widespread ramifications for the evolutionary dynamics of spatially connected populations, regardless of the specific formulation proposed.
 \\
 
 \noindent {\bf (b) Density-dependent straying}
 %Density dependent m
-\noindent We have so far assumed that the proportion of strays leaving and entering a population is constant, however there is mounting evidence that at least in some species (including salmon) the straying rate is density-dependent with a signature of collective navigation \citep{Berdahl:2016dx,Bett:2017ha}.
+\noindent We have so far assumed that the proportion of strays leaving and entering a population is constant, however there is mounting evidence that at least in some species (including salmon) the straying rate is density-dependent, a signature of collective navigation \citep{Berdahl:2016dx,Bett:2017ha}.
 Specifically, the rate at which individuals stray has been linked directly to a collective decision-making phenomenon, where greater numbers of individuals tend to decrease the rate at which individuals err, reducing the overall proportion of a population that strays.
 According to Berdahl et al. \citep{Berdahl:2014bl,Berdahl:2016dx}, given the probability that an individual strays is $m_0$, the proportion of the local population $N_i(t)$ that strays is
 
@@ -280,22 +282,23 @@ According to Berdahl et al. \citep{Berdahl:2014bl,Berdahl:2016dx}, given the pro
 \end{equation}
 
 \noindent where $C$ is a half-saturation constant and is set to $C=1000$ throughout.
-We note that at the limit $C\rightarrow \infty$, the density-dependent straying rate becomes constant such that $m(t) \rightarrow m_0$, and this corresponds to the original formulation where $m=m_0$.
-A similar observation shows that when the population density is very high, $m(t) \rightarrow 0$, and when it is small, individuals operate without regard to collective behavior, meaning $m(t) \rightarrow m_0$.
-Thus, for realistic population densities, $m(t) < m_0$.\\
+% We note that at the limit $C\rightarrow \infty$, the density-dependent straying rate becomes constant such that $m(t) \rightarrow m_0$, and this corresponds to the original formulation where $m=m_0$.
+When the population density is very high, $m(t) \rightarrow 0$, and when the population is small, individuals operate without regard to collective behavior, such that $m(t) \rightarrow m_0$.
+For realistic population densities, $m(t) < m_0$.\\
 
 
 \noindent {\bf (c) Habitat heterogeneity}
-\noindent Increasing differences in optimal trait values between sites ($\Delta\theta = \left|\theta_i - \theta_j\right|$) corresponds to greater regional differences in the conditions that favor alternative trait complexes, which we interpret here as increased habitat heterogeneity.
+\noindent Increasing differences in optimal trait values between sites ($\Delta\theta = \left|\theta_i - \theta_j\right|$) corresponds to greater regional differences in the conditions that favor alternative trait complexes, which can be interpreted as increased habitat heterogeneity.
 If both populations are isolated, natural selection will direct the mean trait values of both populations towards their respective optima, such that $\mu_i(t) \rightarrow \theta_i$ as $t\rightarrow\infty$.
 %difference in optimal trait values between the local and remote populations, which we call . 
 %Linking m/m0 and thetadiff
-Although we largely treat habitat heterogeneity and the rate of straying as independent parameters, we evaluate a case where we assume that increased habitat heterogeneity correlates with lower straying rates, and vice versa (illustrated in figure \ref{fig:mthetarelation}).
+Habitat heterogeneity and the rate of straying are treated both independently, and as parameters that covary.
+In the latter instance, we evaluate a case where it is assumed that increased habitat heterogeneity correlates with lower straying rates, and vice versa (illustrated in figure \ref{fig:mthetarelation}).
 Two scenarios may lead to this correlation: 
-(\emph{i}) sites may be distributed over greater spatial distances, where habitat differences are assumed to be exaggerated and the likelihood of straying over greater distances would be lower \citep{Candy:2000hu,JPE:JPE1383};
+(\emph{i}) sites may be distributed over greater spatial distances, where habitat differences are assumed to be exaggerated and the likelihood of straying over greater distances is lower \citep{Candy:2000hu,JPE:JPE1383};
 (\emph{ii}) individuals may have behaviors promoting dispersal between habitats with structural or physiognomic similarities \citep{Peterson:2014gy}.
 In this case, the rate of straying would be greater between habitats with smaller differences in trait optima (lower $\Delta\theta$) and lesser between habitats with greater differences in trait optima (higher $\Delta\theta$).
-
+\\
 % Where indicated, we account for correlation between the straying rate and the difference between optimal trait values by assuming that $m$ (if the stray rate is constant) or $m_0$ (if the stray rate is density-dependent) is a function of the difference between optimal trait values between sites $\Delta\theta$.
 % The straying rate is maximized at $m_{\rm max} = 0.5$, assuming both sites are equally attractive to the respective populations.
 % Thus, we can integrate these two variables by setting $m,m_0 = (1/m_{\rm max} + \epsilon \Delta\theta)^{-1}$, where $\epsilon$ sets the sensitivity of a declining $m$ to increasing distance (greater values of $\Delta\theta$), which we set to $\epsilon=2$.\\
@@ -303,7 +306,7 @@ In this case, the rate of straying would be greater between habitats with smalle
 
 \noindent {\bf (d) Measuring metapopulation robustness}
 \noindent We evaluated metapopulation robustness by measuring the average-CV portfolio effect (PE) \citep{Anderson:2014cx,Schindler:2015gf} as well as the time required for the system to return to a steady state following an induced disturbance to one or both of the populations \citep{Ovaskainen:2002il}.
-The average-CV portfolio effect is, as the name implies, the average CV across each population divided by the CV of the aggregate \citep{Anderson:2013gb}, such that
+The average-CV portfolio effect is, as the name implies, the average CV across each population $N_i$ divided by the CV of the aggregate $N_T=\sum_i N_i$ \citep{Anderson:2013gb}, such that
 
 
 \begin{equation}
@@ -313,11 +316,11 @@ The average-CV portfolio effect is, as the name implies, the average CV across e
 
 \noindent where in this case the number of populations is limited to $X=2$ and the expectations $\rm E(\cdot)$ and variances $\rm VAR(\cdot)$ are evaluated at the steady state.
 The steady state condition is denoted by `$*$'.
-As the CV of $N_T^*$ decreases relative to that of the constituent populations, $\langle{\rm PE}\rangle > 1$, and the metapopulation is presumed to become more stable.
-Portfolio effects greater than unity corresponds to less synchronization  \citep{Loreau:2008ju,Anderson:2014cx,Yeakel:2013vz} and thus a greater potential for demographic rescue among populations, buffering the system as a whole against extinction. 
+As the CV of $N_T^*$ decreases relative to that of the constituent populations, $\langle{\rm PE}\rangle > 1$, and the metapopulation is presumed to be more stable because the aggregate has functioned to dampen population-level variance.
+Moreover, portfolio effects greater than unity correspond to less synchronization  \citep{Loreau:2008ju,Anderson:2014cx,Yeakel:2013vz} and thus a greater potential for demographic rescue among populations, buffering the system as a whole against extinction. 
 
 %Although there are more robust ways to measure the portfolio effect (in particular for comparing the PE across species with different mean-variance relationships; REF: Anderson), its only utlity here is to provide a simple statistical measure of metapopulation persistence.
-A more direct way to measure system robustness is to measure the time that the system (measured as the aggregate steady state biomass $N_T^*$) takes to recover its steady state abundance following an induced disturbance: systems that recover quickly (shorter recovery times) are more robust than those that recover more slowly (longer recovery times).
+A more direct way to measure system robustness is to measure the time that the system (measured as the aggregate steady state biomass $N_T^*$) takes to return to a steady state following an induced disturbance: systems that recover quickly (shorter recovery times) are more robust than those that recover more slowly (longer recovery times).
 Although there is a direct eigenvalue relationship between the rate of return following a small pulse perturbation \citep{GuckHolmes}, because we aimed to 1) assess the effects of a large perturbation, and 2) estimate the time required for all transient effects to decay (including dampened oscillations), we used a simulation-based numerical procedure.
 Recovery time was calculated by initiating a disturbance at $t=t_d$, and monitoring $N_T(t_d+t)$ as $t\rightarrow T$, where $T$ is large. 
 The aggregate was deemed recovered at $t_r$, such that recovery time was calculated as $t_r-t_d$, and recovery at $t=t_r$ was measured as the initial $t$ where $N_T(t) < {\rm SD}\left( N_T^* \right)$ for $t\in(t_r,T)$, where $\rm{SD}(\cdot)$ is standard deviation (illustrated in figure \ref{fig:recovery}).
@@ -327,7 +330,7 @@ The aggregate was deemed recovered at $t_r$, such that recovery time was calcula
 Numerically estimating the time that it takes for a perturbed system to recover also permits a more detailed perspective of metapopulation fragility.
 For example, if populations settle to alternative stable states, comparing recovery times after a disturbance applied to individual populations allows for an assessment of which component of the metapopulation has a longer-lasting influence on the system's recovery. % (alternative stable states in our model requiring one population to be high-density and one low-density)
 We measured recovery time following three types of induced disturbance: (\emph{i}) extinction of the low-density population; (\emph{ii}) extinction of the high-density population (scenarios \emph{i} and \emph{ii} are equivalent if populations have the same density); (\emph{iii}) near-collapse of both populations where just 1.0\% of each survives.
-Throughout, we will refer to an increase in the portfolio effects and/or reduction in recovery times as promoting metapopulation robustness, which promotes persistence.
+Throughout, we will refer to an increase in the portfolio effects and/or reduction in recovery times as promoting metapopulation robustness and by extension persistence.
 \\
 
 
@@ -339,11 +342,11 @@ Throughout, we will refer to an increase in the portfolio effects and/or reducti
 \noindent Regardless of density dependence, straying lowers steady state densities for both populations by (\emph{i}) the donor population losing locally-adapted individuals to the recipient population and (\emph{ii}) the introduction of maladapted individuals to the recipient population from the donor population (Fig. \ref{fig:traj}).
 This prediction is in accordance with observations from natural populations \citep{Bett:2017ha}. %, regardless of trait heritability and variance or habitat heterogeneity
 The decline in steady state densities is not gradual: as straying increases, the system crosses a pitchfork bifurcation (PFB) \citep{AleksandrovichKuznetsov:1995p2580} whereby the single steady state for the metapopulation bifurcates into two basins of attraction: one at high biomass, and one at low biomass density (figure \ref{fig:traj}a, \ref{fig:PE}a).
-In discrete systems, a pitchfork bifurcation is a specific case of the cusp bifurcation (which occurs when two fold bifurcations intersect at a cusp), which occurs when the real part of the dominant eigenvalue of the Jacobian matrix crosses the unit circle at +1, which we show in figure \ref{fig:eigs}.
+In discrete systems, a pitchfork bifurcation is a specific case of the cusp bifurcation (where two fold bifurcations intersect at a cusp) \citep{AleksandrovichKuznetsov:1995p2580}, and occurs when the real part of the dominant eigenvalue of the Jacobian matrix crosses the unit circle at +1 (figure \ref{fig:eigs}).
+Mean trait values for both populations bifurcate similarly (figure \ref{fig:traj}b). 
 
-Mean trait values for both populations bifurcate similarly (figure \ref{fig:traj}b), depending on which population attains a low- vs. high-density. 
-Above the threshold straying rate defined by the PFB, there are two alternative eco-evolutionary states: the \emph{dominant state} population will have a higher density and higher degree of local adaptation (smaller trait offset from the local optimum), while the \emph{subordinate state} population will have lower density with maladapted trait values (larger trait offset from the local optimum). 
-Hysteresis is observed to occur at this transition, such that the single steady state regime cannot be easily recovered by lowering $m$ after the system attains alternative steady states (figure \ref{fig:hysteresis}).
+Above the threshold straying rate defined by the PFB, there are two alternative eco-evolutionary states: the \emph{dominant state} population will have a higher density and greater degree of local adaptation (smaller trait offset from the local optimum), while the \emph{subordinate state} population will have lower density with maladapted trait values (larger trait offset from the local optimum). 
+Hysteresis is observed to occur at this transition, such that the single steady state regime cannot easily be recovered by reducing straying after the system attains alternative steady states (figure \ref{fig:hysteresis}).
 These dynamics are also observed in the Ronce and Kirkpatrick model, where populations are described as transitioning between symmetric to asymmetric states \citep{Ronce:2001dp}.
 Whether a specific population goes to one state or the other in our model is random, due to a small amount of introduced variance in the initial conditions.
 
@@ -352,15 +355,15 @@ Whether a specific population goes to one state or the other in our model is ran
 
 
 
-Trait heritability has a large impact on the degree to which straying affects both the aggregate population steady state density ($N^*_T=N^*_1+N^*_2$; figure \ref{fig:PE}a) as well as the difference between steady state densities (the distance between alternative stable states: $\Delta N^*=|N^*_1-N^*_2|$; figure \ref{fig:PE}b).
-Greater trait heritability results in a faster decline in $N_T^*$ with increasing straying rates $m$, but leads to only moderate changes to $\Delta N^*$.
-Conversely, in the context of lower trait heritability, an increase in the straying rate has little impact on the total biomass density but contrastingly large effects on $\Delta N^*$.
-The pitchfork bifurcation (the black line in Figs. \ref{fig:PE}a-c) occurs at lower values of the straying rate $m$ with decreased trait heritability $h^2$ (Fig \ref{fig:PE}a,b), indicating that weaker coupling between ecological and evolutionary dynamics in addition to higher rates of straying promotes the appearance of alternative stable states.
-Although trait heritability among salmonids is variable, most life history traits have an $h^2 <0.5$ \citep{Carlson:2008hl}, and we largely focus additional analyses on that range.
+Trait heritability $h^2$ has a large effect on the degree to which straying affects both the aggregate population steady state density ($N^*_T$; figure \ref{fig:PE}a) as well as the difference between steady state densities (the distance between alternative stable states: $\Delta N^*=|N^*_1-N^*_2|$; figure \ref{fig:PE}b).
+Greater trait heritability results in a steeper decline in $N_T^*$ with increasing straying rates $m$, but leads to only moderate changes to $\Delta N^*$.
+Lower trait heritability has little effect on the total biomass density but contrastingly large effects on $\Delta N^*$.
+The pitchfork bifurcation (the black line in Figs. \ref{fig:PE}a-c) occurs at lower values of the straying rate $m$ with lower heritability (Fig \ref{fig:PE}a,b), indicating that weaker coupling between ecological and evolutionary dynamics in addition to higher rates of straying promotes the appearance of alternative stable states.
+Although trait heritability among salmonids is variable, most life history traits have an $h^2 <0.5$ \citep{Carlson:2008hl}, and we largely focus our efforts on that range.
 
 %Critical slowing down
 As the pitchfork bifurcation is approached with increasing $m$, the portfolio effect increases sharply due to an amplification in variance within both donor and recipient populations.
-This amplification in variance is the product of a dynamical process known as \emph{critical slowing down} that occurs near pitchfork bifurcations \citep{Scheffer:2009gg}, a phenomenon that some have suggested may serve as an early warning indicator for approaching phase transitions \citep{Scheffer:2009gg,Lade:2012eu,Anonymous:2013br,Dakos:2014br,Krkosek:2014ch}.
+This amplification in variance is the product of a dynamical process known as \emph{critical slowing down} that can occur near bifurcations \citep{Scheffer:2009gg}, a phenomenon that some have suggested may serve as an early warning indicator for approaching phase transitions \citep{Scheffer:2009gg,Lade:2012eu,Anonymous:2013br,Dakos:2014br,Krkosek:2014ch}.
 For larger values of $m$ (to the right of the pitchfork bifurcation in Fig \ref{fig:PE}a-c), where alternative stable states occur, the portfolio effect declines steadily as the CV of $N_T^*$ increases.
 The decline over $m$ is more gradual if trait heritability is low, and steeper if trait heritability is high (figure \ref{fig:PE}c).
 
@@ -980,7 +983,9 @@ We suggest that understanding the spatial complexity of metapopulations dispersi
 Parameter & Definition \\
 \hline
 $N_i(t)$, $N_T(t)$ & Individual, aggregate population over time\\
-$\mu_i(t)$ & Mean trait value of population $i$ over time\\
+$x_i$ & Trait value for an individual in population $i$\\
+$\mu_i(t)$ & Mean of $x$ for population $i$ over time\\
+$\sigma^2$ & Genetic variance of trait $x$\\
 $m$, $m(t)$ & Constant, density dependent straying rate\\
 $m_0$ & Straying rate of an individual\\
 $R_i[\mu(t)]$ & Recruitment rate of population $i$\\
@@ -990,7 +995,6 @@ $\beta$ & Strength of density dependence\\
 $\theta_i$ & Optimal trait value for habitat $i$\\
 $\Delta\theta$ & Habitat heterogeneity\\
 $\tau$ & Strength of selection\\
-$\sigma^2$ & Genetic variance\\
 $h^2$ & Heritability\\
 $C$ & Half saturation constant for $m(t)$\\
 ${\rm PE}$ & Portfolio Effect\\
@@ -1046,6 +1050,20 @@ The black line denotes the pitchfork bifurcation.
 \end{figure*}
 
 
+\begin{figure*}
+  \captionsetup{justification=raggedright,
+singlelinecheck=false
+}
+\centering
+\includegraphics[width=0.9\textwidth]{fig_relax_lowh.pdf}
+\caption{
+Recovery time of $N_T^*$ following the extinction of either the low-density (light gray) or high-density (gray) population, or the near-collapse of both (dark gray) assuming (a) constant straying rates $m$ and (b) density-dependent straying rates (evaluated at the steady state $m^*$) with trait heritability $h^2=0.2$.
+If $m$ is density-dependent, in the alternative stable state regime there are two straying rates observed: one each for the low- and high-density populations, respectively, which are linked by a horizontal line.
+PFB marks the pitchfork bifurcation.
+} \label{fig:relax}
+\end{figure*}
+
+
 \begin{figure}
   \captionsetup{justification=raggedright,
 singlelinecheck=false
@@ -1061,18 +1079,6 @@ PFB marks the pitchfork bifurcation.
 } \label{fig:thetaPE}
 \end{figure}
 
-\begin{figure*}
-  \captionsetup{justification=raggedright,
-singlelinecheck=false
-}
-\centering
-\includegraphics[width=0.9\textwidth]{fig_relax_lowh.pdf}
-\caption{
-Recovery time of $N_T^*$ following the extinction of either the low-density (light gray) or high-density (gray) population, or the near-collapse of both (dark gray) assuming (a) constant straying rates $m$ and (b) density-dependent straying rates (evaluated at the steady state $m^*$) with trait heritability $h^2=0.2$.
-If $m$ is density-dependent, in the alternative stable state regime there are two straying rates observed: one each for the low- and high-density populations, respectively, which are linked by a horizontal line.
-PFB marks the pitchfork bifurcation.
-} \label{fig:relax}
-\end{figure*}
 
 \begin{figure}
   \captionsetup{justification=raggedright,
@@ -1113,10 +1119,11 @@ singlelinecheck=false
 singlelinecheck=false
 }
 \centering
-% \includegraphics[width=0.35\textwidth]{fig_recovery.pdf}
+% \includegraphics[width=0.35\textwidth]{fig_mthetarelation.pdf}
 \caption{
-Example of the numerical procedure used to estimate recovery time. After a disturbance is introduced, the recovery time is calculated by measuring the point in time where $N_T$ (in black), which is the aggregate of both populations (blue, red) settles to within one standard deviation of the new equilibrium $N_T^*$. 
-} \label{fig:recovery}
+In some cases, habitat heterogeneity may be assumed to determine the rate of straying, if for example:
+1) sites are distributed over greater spatial distances, where habitat differences are assumed to be greater between more distant sites, or 2) individuals have behaviors promoting dispersal between habitats that are more similar. To examine such cases, we use the relationship $m= 0.5(1 + \Delta\theta)^{-1}$ where maximum straying is assumed to occur at $m=0.5$ (perfect mixing).
+} \label{fig:mthetarelation}
 \end{figure}
 
 \begin{figure}
@@ -1124,11 +1131,10 @@ Example of the numerical procedure used to estimate recovery time. After a distu
 singlelinecheck=false
 }
 \centering
-% \includegraphics[width=0.35\textwidth]{fig_mthetarelation.pdf}
+% \includegraphics[width=0.35\textwidth]{fig_recovery.pdf}
 \caption{
-In some cases, habitat heterogeneity may be assumed to determine the rate of straying, if for example:
-1) sites may be distributed over greater spatial distances, where habitat differences are assumed to be greater between more distant sites, or 2) individuals have behaviors promoting dispersal between habitats that are more similar. To examine such cases, we use the relationship $m= 0.5(1 + \Delta\theta)^{-1}$ where maximum straying is assumed to occur at $m=0.5$ (perfect mixing).
-} \label{fig:mthetarelation}
+Example of the numerical procedure used to estimate recovery time. After a disturbance is introduced, the recovery time is calculated by measuring the point in time where $N_T$ (in black), which is the aggregate of both populations (blue, red) settles to within one standard deviation of the new equilibrium $N_T^*$. 
+} \label{fig:recovery}
 \end{figure}
 
 \begin{figure}
